# tmoji-server

./: .gitignore  Dockerfile  README-EN.md  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 750b12fb0712_add_composed_image_id_to_service.py  a4667a7f3e7c_add_area_image_id_to_area.py  f6a9623e3927_initial_migration.py
app/: celery_app.py  db.py  load_env.py  main.py
app/api/v1/: routers.py
app/api/v1/endpoints/: image.py  service.py  step_1.py  step_2.py  step_3.py  step_4.py  upload.py
app/api/v1/responses/: image.py  step_1.py  step_2.py  step_3.py  step_4.py
app/constants/: client_url.py  database_url.py  image_path.py
app/core/: tx.py
app/crud/: area.py  image.py  service.py
app/models/: __init__.py  area.py  image.py  service.py
app/models/enums/: service.py
app/schemas/: area.py  base.py  image.py  service.py
app/tasks/: compose.py  ocr.py  translate.py
app/utils/: enum_to_html.py  google_translate.py  ssh_keys.py  storage.py
deploy/: nginx.conf
deploy/nginx/: default.bootstrap.conf  default.prod.conf
